--- a/Frontend/marcador-pontos/src/app/app.component.html
+++ b/Frontend/marcador-pontos/src/app/app.component.html
@@ -1,1 +1,27 @@
-<router-outlet></router-outlet>
+<mat-toolbar color="primary">
+    <button mat-icon-button aria-label="Menu icon" (click)="toggleMenu()">
+        <mat-icon>menu</mat-icon>
+    </button>
+    <h1 routerLink="/home" style="cursor: pointer">Registro de pontos do Basquete</h1>
+</mat-toolbar>
+<mat-sidenav-container autosize >
+    <mat-sidenav [mode]="isMobile ? 'over' : 'side'" [opened]="isMobile ? 'false' : 'true'">
+        <mat-nav-list>
+            <a mat-list-item routerLink="/cadastro">
+                <span class="entry">
+                    <mat-icon>sports_basketball</mat-icon>
+                    <span *ngIf="!isCollapsed" style="padding-top: 0.28rem">Lançar pontos</span>
+                </span>
+            </a>
+            <a mat-list-item routerLink="/resultados">
+                <span class="entry" >
+                    <mat-icon>scoreboard</mat-icon>
+                    <span *ngIf="!isCollapsed" style="padding-top: 0.26rem">Ver resultados</span>
+                </span>
+            </a>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content>
+        <router-outlet></router-outlet>
+    </mat-sidenav-content>
+</mat-sidenav-container>
