--- a/Frontend/marcador-pontos/src/styles.scss
+++ b/Frontend/marcador-pontos/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,15 +19,12 @@ $marcador-pontos-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$marcador-pontos-theme: mat.define-light-theme((
-  color: (
-    primary: $marcador-pontos-primary,
-    accent: $marcador-pontos-accent,
-    warn: $marcador-pontos-warn,
-  ),
-  typography: mat.define-typography-config(),
-  density: 0
-));
+$marcador-pontos-theme: mat.define-light-theme((color: (primary: $marcador-pontos-primary,
+        accent: $marcador-pontos-accent,
+        warn: $marcador-pontos-warn,
+      ),
+      typography: mat.define-typography-config(),
+      density: 0));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -37,5 +33,116 @@ $marcador-pontos-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.container-base {
+  background-color: white;
+  width: 30%;
+  margin: auto;
+  margin-top: 10rem;
+  border-radius: 0.75rem;
+  box-shadow: #3f51b5 0px 2px 8px 0px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #3f51b5;
+  vertical-align: middle;
+}
+
+.results-container {
+  width: 100%;
+  padding: 2rem;
+  font-weight: 100;
+}
+
+.results-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100% !important;
+}
+
+.results-fields{
+  text-align: end;
+}
+
+.field {
+  margin: 1.5rem;
+  font-weight: 500;
+}
+
+.alert-message {
+  color: red;
+  font-size: 12px;
+  font-style: italic;
+  font-weight: 100;
+}
+
+.button {
+  background-color: #3f51b5;
+  border-radius: 8px;
+  border-style: none;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  height: 40px;
+  line-height: 20px;
+  list-style: none;
+  margin: 0;
+  outline: none;
+  padding: 10px 16px;
+  float: right;
+  text-align: center;
+  text-decoration: none;
+  transition: color 100ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-right: 1.4rem;
+  margin-bottom: 1rem;
+}
+
+.button:hover,
+.button:focus {
+  background-color: #FFFFFF;
+  color: #3f51b5;
+  border-color: #3f51b5;
+  border-style: solid;
+  border-width: 1px;
+}
+
+input {
+  margin-top: 8px;
+  padding: 15px;
+  border: 1px solid #ccc;
+  border-radius: 0px;
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
+  font-size: 13px;
+}
+
+input:focus {
+  -moz-box-shadow: none !important;
+  -webkit-box-shadow: none !important;
+  box-shadow: none !important;
+  border: 1px solid #3f51b5;
+  outline-width: 0;
+  transition: All 0.5s ease-in;
+  -webkit-transition: All 0.5s ease-in;
+  -moz-transition: All 0.5s ease-in;
+  -o-transition: All 0.5s ease-in;
+}
