feat(api): implementacao de testes unitarios

--- a/Frontend/marcador-pontos/src/pages/cadastro-partida/cadastro-partida.component.html
+++ b/Frontend/marcador-pontos/src/pages/cadastro-partida/cadastro-partida.component.html
@@ -25,6 +25,8 @@
                 </div>
             </div>
 
+            <input id="recordeQuebrado" type="text" formControlName="recordeQuebrado" required value="false" hidden />
+
             <button class="button" type="submit" [disabled]="partidaForm.invalid">Salvar</button>
         </form>
     </div>
